--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,11 @@
+version: '3.8'
+
 services:
   redis:
     container_name: redis
     image: redis:7
     ports:
-      - "6380:6379"
+      - "6379:6379"
     volumes:
       - redis-data:/data
     healthcheck:
@@ -11,6 +13,9 @@ services:
       interval: 5s
       timeout: 3s
       retries: 10
+    networks:
+      - app-network
+
   test:
     build:
         context: ./TestDokerGrpc
@@ -26,7 +31,7 @@ services:
       redis:
         condition: service_healthy
     networks:
-      app-network
+      - app-network
   clients:
     build:
         context: ./ClientsAPI
@@ -42,7 +47,7 @@ services:
       redis:
         condition: service_healthy
     networks:
-      app-network
+      - app-network
   
 volumes:
   redis-data:
